--- a/iterm/com.googlecode.iterm2.plist
+++ b/iterm/com.googlecode.iterm2.plist
@@ -317,9 +317,11 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>309 660 445 103 0 0 1920 1057 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>302 303 796 473 0 0 1440 877 </string>
+	<string>527 431 796 473 0 0 1920 1057 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>98 69 1313 795 0 0 1440 877 </string>
+	<string>601 173 1145 795 0 0 1920 1057 </string>
+	<key>NSWindow Frame iTerm Window 1</key>
+	<string>428 109 1145 795 0 0 1920 1057 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -555,7 +557,7 @@
 			<key>Close Sessions On End</key>
 			<true/>
 			<key>Columns</key>
-			<integer>160</integer>
+			<integer>140</integer>
 			<key>Command</key>
 			<string></string>
 			<key>Cursor Color</key>
@@ -984,7 +986,7 @@
 			<key>Terminal Type</key>
 			<string>xterm-256color</string>
 			<key>Transparency</key>
-			<real>0.14721010469543147</real>
+			<real>0.0</real>
 			<key>Unlimited Scrollback</key>
 			<false/>
 			<key>Use Bold Font</key>
@@ -1061,7 +1063,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2017-12-11T01:37:34Z</date>
+	<date>2018-01-29T17:47:14Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>Window Arrangements</key>
