--- a/iterm/com.googlecode.iterm2.plist
+++ b/iterm/com.googlecode.iterm2.plist
@@ -273,6 +273,10 @@
 	<string>Default</string>
 	<key>Default Bookmark Guid</key>
 	<string>32A63BD8-6ED1-43CC-B58C-489DD7C9548E</string>
+	<key>DisableFullscreenTransparency</key>
+	<true/>
+	<key>HideScrollbar</key>
+	<true/>
 	<key>HotkeyMigratedFromSingleToMulti</key>
 	<true/>
 	<key>LoadPrefsFromCustomFolder</key>
@@ -315,11 +319,17 @@
 	<key>NSTableView Supports v2 KeyBingingTable</key>
 	<true/>
 	<key>NSWindow Frame NSFontPanel</key>
-	<string>309 660 445 103 0 0 1920 1057 </string>
+	<string>805 353 445 234 0 0 1440 877 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>302 303 796 473 0 0 1440 877 </string>
+	<string>288 281 1018 447 0 0 1440 877 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>98 69 1313 795 0 0 1440 877 </string>
+	<string>173 24 1050 815 0 0 1440 877 </string>
+	<key>NSWindow Frame iTerm Window 1</key>
+	<string>351 38 1065 795 0 0 1440 877 </string>
+	<key>NSWindow Frame iTerm Window 2</key>
+	<string>197 47 1065 795 0 0 1440 877 </string>
+	<key>NSWindow Frame iTerm Window 3</key>
+	<string>218 24 1065 795 0 0 1440 877 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -555,7 +565,7 @@
 			<key>Close Sessions On End</key>
 			<true/>
 			<key>Columns</key>
-			<integer>160</integer>
+			<integer>130</integer>
 			<key>Command</key>
 			<string></string>
 			<key>Cursor Color</key>
@@ -984,7 +994,7 @@
 			<key>Terminal Type</key>
 			<string>xterm-256color</string>
 			<key>Transparency</key>
-			<real>0.14721010469543147</real>
+			<real>0.0</real>
 			<key>Unlimited Scrollback</key>
 			<false/>
 			<key>Use Bold Font</key>
@@ -1008,11 +1018,11 @@
 	<key>NoSyncHaveWarnedAboutPasteConfirmationChange</key>
 	<true/>
 	<key>NoSyncInstallationId</key>
-	<string>C68B2433-1995-483B-A34C-D1BFC7D8CF37</string>
+	<string>0CAD5344-13F7-4E00-82FD-82AAA2C23D7A</string>
 	<key>NoSyncPermissionToShowTip</key>
 	<false/>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
-	<real>534457052.22860003</real>
+	<real>532390729.563586</real>
 	<key>OpenArrangementAtStartup</key>
 	<false/>
 	<key>OpenNoWindowsAtStartup</key>
@@ -1051,18 +1061,22 @@
 		</dict>
 	</dict>
 	<key>PrefsCustomFolder</key>
-	<string>/Users/elliot-jostle/dotfiles/iterm</string>
+	<string>/Users/elliotmah/dotfiles/iterm</string>
 	<key>SUEnableAutomaticChecks</key>
 	<true/>
 	<key>SUFeedAlternateAppNameKey</key>
 	<string>iTerm</string>
 	<key>SUFeedURL</key>
-	<string>https://iterm2.com/appcasts/final.xml?shard=96</string>
+	<string>https://iterm2.com/appcasts/final.xml?shard=18</string>
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2017-12-11T01:37:34Z</date>
+	<date>2018-01-29T04:46:15Z</date>
 	<key>SUSendProfileInfo</key>
+	<false/>
+	<key>TerminalVMargin</key>
+	<integer>2</integer>
+	<key>UseBorder</key>
 	<false/>
 	<key>Window Arrangements</key>
 	<dict/>
@@ -1070,5 +1084,9 @@
 	<string>/-+\~_.</string>
 	<key>iTerm Version</key>
 	<string>3.1.5</string>
+	<key>kCPKSelectionViewPreferredModeKey</key>
+	<integer>0</integer>
+	<key>kCPKSelectionViewShowHSBTextFieldsKey</key>
+	<false/>
 </dict>
 </plist>
